<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kintetsu.cmsc150.artificialdietician.AddConstraintActivity"
    tools:showIn="@layout/activity_add_constraint">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:id="@+id/obj_panel">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/obj_func_field"
            android:hint="@string/obj_hint" />
        <Button
            android:text="@string/obj_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_obj"
            android:background="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/obj_panel"
        android:layout_centerHorizontal="true"
        android:id="@+id/constraint_panel"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/constraint_field"
            android:layout_weight="1"
            android:hint="@string/constraint_hint" />

        <Button
            android:text="@string/constraint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_constraint"
            android:background="@color/colorAccent"
            android:padding="10dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/constraint_panel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/obj_text" />

    <Button
        android:text="@string/optimize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/optimize"
        android:background="@color/colorAccent2" />

    <TextView
        android:text="@string/obj_function_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/obj_text"
        android:layout_above="@+id/optimize"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />
</RelativeLayout>
